--- a/video.html
+++ b/video.html
@@ -2,15 +2,16 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Просмотр - FreeTube</title>
+    <title>FreeTube - Просмотр видео</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/appwrite@14.0.1/dist/umd/sdk.js"></script>
 </head>
 <body>
     <header>
-        <h1>▶️ Просмотр видео</h1>
+        <h1>▶️ FreeTube</h1>
         <nav>
             <a href="index.html">Главная</a>
+            <a href="upload.html">Загрузить</a>
         </nav>
     </header>
 
