Update video upload instructions and limit size

--- a/upload.html
+++ b/upload.html
@@ -29,7 +29,7 @@
             <div class="form-group">
                 <label for="video-file">Выберите видео (MP4):</label>
                 <input type="file" id="video-file" accept="video/mp4" required>
-                <small>⚠️ Видео будет преобразовано в Base64 и сохранено в базе данных. Выбирайте небольшие файлы!</small>
+                <small>⚠️ Видео будет преобразовано в Base64. Выбирайте файлы до 10MB!</small>
             </div>
 
             <div id="progress-area" style="display: none;">
